# 8views

./: .gitignore  CHANGELOG.md  EightViews.sdef  EightViews_Prefix.pch  Info.plist  PLAN.md  PROGRESS.md  README.md  container-migration.plist  main.m
.github/workflows/: rust.yml
8views-core/: Cargo.toml
8views-core/sc-archive/: Cargo.toml
8views-core/sc-archive/benches/: archive_bench.rs
8views-core/sc-archive/src/: encoding.rs  folder_reader.rs  partial_reader.rs  sort.rs  tar_archive.rs  zip_archive.rs
8views-core/sc-core/: Cargo.toml
8views-core/sc-core/src/: error.rs
8views-core/sc-ffi/: Cargo.toml  build.rs
8views-core/sc-ffi/src/: eightviews.udl  lib.rs
8views-core/sc-ffi/tests/: pipeline_test.rs
8views-core/sc-image/: Cargo.toml
8views-core/sc-image/src/: cache.rs  lib.rs  thumbnail.rs
8views-core/sc-storage/: Cargo.toml
8views-core/sc-storage/src/: lib.rs  migration.rs  ocr.rs  xattr_store.rs
8views.xcodeproj/: project.pbxproj
App Review Info/: reviewer-note.md
Classes/: EightViewsAppDelegate.h  EightViewsAppDelegate.m  No Sign.xcconfig  SimpleComicAppDelegate.h  SimpleComicAppDelegate.m
Classes/Helpers/: CenteredTextLayer.swift  UKXattrMetadataStore.h  UKXattrMetadataStore.m
Classes/Managed Objects/: ManagedSmartFolder+CoreDataClass.h  ManagedSmartFolder+CoreDataClass.m  ManagedSmartFolder+CoreDataProperties.h  ManagedSmartFolder+CoreDataProperties.m  TSSTManagedGroup+CoreDataProperties.h  TSSTManagedGroup+CoreDataProperties.m  TSSTManagedGroup.h  TSSTManagedGroup.m  TSSTManagedSession+CoreDataProperties.h  TSSTManagedSession+CoreDataProperties.m  TSSTManagedSession.h  TSSTManagedSession.m  TSSTPage+CoreDataProperties.h  TSSTPage+CoreDataProperties.m  TSSTPage.m
Classes/Preferences/: ColorSecureUnarchiveFromDataTransformer.swift  DTPreferencesController.swift
Classes/Progress Bar/: DTPolishedProgressBar.swift  TSSTCircularImageView.swift  TSSTImageView.swift  TSSTInfoView.swift  TSSTInfoWindow.swift
Classes/Session/: DTToolbarItems.swift  NSWindow+Extensions.swift  TSSTPageView.h  TSSTPageView.m  TSSTSessionWindowController+NSToolbarDelegate.swift  TSSTSessionWindowController.h  TSSTSessionWindowController.m
Classes/Thumbnail View/: TSSTKeyWindow.swift  TSSTThumbnailView.swift  TSSTTransparentView.swift
Classes/Touch Bar/: TSSTScrubberBarItem.swift  TSSTSessionWindowController+NSTouchBar.swift  TSSTThumbnailItemView.swift
EightViewsCore/: Package.swift
QuickComic/: DTQuickComicCommon.h  DTQuickComicCommon.m  GeneratePreviewForURL.m  GenerateThumbnailForURL.m  Info.plist  QuickComic.exp  QuickComicCommonSwift.swift  main.h
QuickComic/QuickComic Preview/: Info.plist  Localizable.xcstrings  PreviewProvider.swift  QuickComic Preview-Bridging-Header.h
QuickComic/QuickComic Thumbnailer/: Info.plist  PartialArchiveParser.swift  QuickComic Thumbnailer-Bridging-Header.h  ThumbnailProvider.swift
Resources/: InfoPlist.xcstrings  Localizable.xcstrings  TSSTSessionWindowToolbar.xcstrings
Resources/Base.lproj/: MainMenu.xib  OCRFindViewController.xib  Preferences.xib  TSSTSessionWindow.xib
Resources/en.lproj/: Credits.rtf
Resources/mul.lproj/: MainMenu.xcstrings  OCRFindViewController.xcstrings  Preferences.xcstrings  TSSTSessionWindow.xcstrings
SimpleComic.xcodeproj/: project.pbxproj
SimpleComicCore/: Package.swift
SimpleComicCore/.build/: build.db  debug.yaml
simple-comic-core/: Cargo.toml
simple-comic-core/sc-archive/: Cargo.toml
simple-comic-core/sc-archive/benches/: archive_bench.rs
simple-comic-core/sc-archive/src/: detect.rs  lib.rs  rar_archive.rs  reader.rs  sevenz_archive.rs  zip_archive.rs
simple-comic-core/sc-archive/tests/: integration_test.rs
simple-comic-core/sc-archive/tests/common/: mod.rs
simple-comic-core/sc-core/: Cargo.toml
simple-comic-core/sc-core/src/: lib.rs  types.rs
simple-comic-core/sc-ffi/: Cargo.toml  build.rs
simple-comic-core/sc-ffi/src/: lib.rs  simplecomic.udl
simple-comic-core/sc-ffi/tests/: pipeline_test.rs
simple-comic-core/sc-image/: Cargo.toml
simple-comic-core/sc-image/benches/: image_bench.rs
simple-comic-core/sc-image/src/: compositor.rs  lib.rs  loader.rs  rotate.rs  scale.rs
simple-comic-core/sc-image/tests/: image_pipeline_test.rs
simple-comic-core/sc-storage/: Cargo.toml
simple-comic-core/sc-storage/src/: lib.rs  migration.rs  session.rs  xattr_store.rs
simple-comic-core/tools/uniffi-bindgen/: Cargo.toml
swift-bindings/: eightviews.swift  eightviewsFFI.h  eightviewsFFI.modulemap  simplecomic.swift
(+339 files in other folders)
