[package]
name = "sc-ffi"
description = "8views Swift/Objective-C FFI bindings via uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "eightviews"

[dependencies]
sc-core = { path = "../sc-core" }
sc-archive = { path = "../sc-archive" }
sc-image = { path = "../sc-image" }
sc-storage = { path = "../sc-storage" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
uniffi.workspace = true
dirs.workspace = true
image.workspace = true

[dev-dependencies]
tempfile = "3"
zip.workspace = true
sc-image = { path = "../sc-image" }
sc-archive = { path = "../sc-archive" }
sc-core = { path = "../sc-core" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
